# TG-bot-Django

./: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  run_ci_locally.sh
.github/workflows/: deploy.yml  full.yml  full_tests.yml  lint_ruff.yml  test.yml  tests.yml
core/: conftest.py  docker-compose.yml  pytest.ini
core/.github/workflows/: tests.yml
core/core/: settings.py  test.py  test_settings.py  urls.py
core/core/settings/: __init__.py  base.py  database.py  logging.py
core/g_cup_site/: admin.py  apps.py  models.py  tests.py  utils.py
core/g_cup_site/management/commands/: get_base_figure_data.py  get_stage_data.py  import_gcup_data.py  update_athelete_classes.py
core/g_cup_site/tasks/: __init__.py  stage_update.py
core/gymkhanagp/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
core/gymkhanagp/templates/gymkhanagp/: index.html  layout.html  subscriptions.html
core/gymkhanagp/templates/gymkhanagp/components/: class_input.html  class_input_off.html  class_input_on.html
core/gymkhanagp/templatetags/: subscription_filters.py
core/gymkhanagp/tests/: conftest.py  factories.py
core/gymkhanagp/tests/test_db/: test_db.py
core/gymkhanagp/tests/test_views/: test_subscription_views.py
core/index/: views.py
core/index/templates/index/: footer.html  header.html  index.html  layout.html
core/index/templates/index/components/: navbar.html
core/telegram_bot/: __init__.py  apps.py  bot.py  commands.py  keyboard.py  main.py  manager.py  models.py  states.py  tests.py
core/telegram_bot/management/commands/: runbot.py
core/telegram_bot/utils/: math_calculate.py  messages.py  users.py
core/templates/: base.html
core/templates/components/: footer.html  messages.html
core/templates/socialaccount/: connections.html
core/tests/: conftest.py
core/tests/fixtures/: __init__.py  database.py  telegram-fixtures.py  telegram.py  telegram_fixtures.py  users.py
core/tests/integration/: test_bot_startup.py  test_server_startup.py
core/tests/unit/: test_admin_notifier.py  test_admin_notifier_notify.py  test_keyboard_handlers.py  test_report_handlers.py  test_telegram_view.py  test_user_utils.py  test_validators.py
core/users/: admin.py  models.py  utils.py
core/users/templates/users/: login.html
nginx/: nginx.conf
